# healthcare-fhir-lakehouse

./: .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
config/: local.example.toml
docs/: index.html
documentation/: ARCHITECTURE.md  TECH_STACK.md  cloud_run_evidence.md  cloud_setup.md  cloud_storage_layout.md  cloud_workflow.md  data_dictionary.md  data_quality_report.md  pipeline_run.md  portfolio_brief.md  privacy_audit.md  relationship_audit.md  runbook.md  source_data_profile.md  table_lineage.md
notebooks/: README.md
scripts/: build_dashboard_data.py  validate_dashboard_data.py
tests/: test_bronze_manifest.py  test_bronze_schema.py  test_bronze_writer.py  test_cli.py  test_cloud_pipeline_contract.py  test_config.py  test_gold_tables.py  test_gold_utils.py  test_gold_writer.py  test_pipeline_orchestrator.py  test_privacy_audit.py  test_privacy_patterns.py  test_privacy_rules.py  test_profile_report.py  test_profiling_inventory.py  test_profiling_schema.py  test_project_foundation.py  test_quality_checks.py  test_silver_build.py  test_silver_condition.py  test_silver_encounter.py  test_silver_fhir_extract.py  test_silver_medication.py  test_silver_medication_administration.py  test_silver_medication_dispense.py  test_silver_medication_request.py  test_silver_medication_statement.py  test_silver_observation.py  test_silver_patient.py  test_silver_procedure.py  test_silver_relationships.py  test_silver_validation.py  test_silver_writer.py  test_source_files.py  test_table_registry.py  test_tooling.py
(+57 files in other folders)
