[project]
name = "healthcare-fhir-lakehouse"
version = "0.1.0"
description = "Demo-scale healthcare FHIR lakehouse pipeline for MIMIC-IV on FHIR."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "pandas>=2.3.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.0",
    "typer>=0.20.0",
]

[project.scripts]
healthcare-fhir-lakehouse = "healthcare_fhir_lakehouse.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
